unpackaged/main/default/objects/Centro__Linked_Conversation__c/Centro__Linked_Conversation__c.object-meta.xml
<CustomObject>
    <description>Associates a Salesforce Record with a Slack Conversation, Message, or Thread.</description>
    <label>Linked Conversation</label>
    <nameField>
        <label>Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Linked Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>