unpackaged/main/default/objects/Centro__Linked_Conversation__c/fields/Centro__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Centro__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Conversations</relationshipLabel>
    <relationshipName>Linked_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>