unpackaged/main/default/objects/Centro__Linked_Conversation__c/fields/Centro__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Centro__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>