unpackaged/main/default/objects/Centro__Linked_Conversation__c/fields/Centro__Slack_MemberId__c.field-meta.xml
<CustomField>
    <fullName>Centro__Slack_MemberId__c</fullName>
    <label>Member ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>