unpackaged/main/default/objects/Centro__Linked_Conversation__c/fields/Centro__WorkspaceTeamId__c.field-meta.xml
<CustomField>
    <fullName>Centro__WorkspaceTeamId__c</fullName>
    <label>Workspace Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>