unpackaged/main/default/objects/Centro__Linked_Conversation__c/fields/GTM_Ticket__c.field-meta.xml
<CustomField>
    <fullName>GTM_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GTM Ticket</label>
    <referenceTo>GTM_Ticket__c</referenceTo>
    <relationshipLabel>Linked Conversations</relationshipLabel>
    <relationshipName>Linked_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>