unpackaged/main/default/objects/Centro__Linked_Conversation__c/fields/Notification_Target__c.field-meta.xml
<CustomField>
    <fullName>Notification_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Target</label>
    <type>Checkbox</type>
</CustomField>