unpackaged/main/default/objects/Centro__Linked_Conversation__c/listViews/Centro__All.listView-meta.xml
<ListView>
    <fullName>Centro__All</fullName>
    <columns>NAME</columns>
    <columns>Centro__RecordId__c</columns>
    <columns>Centro__AccountId__c</columns>
    <columns>Centro__ChannelId__c</columns>
    <columns>Centro__Message_TS__c</columns>
    <columns>Centro__Slack_MemberId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>